# Pokerowe-Kombinacje

./: .gitignore  README.md
PokeroweKombinacje/: CMakeLists.txt  druk.cpp  druk.h  karty.h  kombinacje.cpp  kombinacje.h  losowanie.cpp  losowanie.h  main.cpp
build-PokeroweKombinacje-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-PokeroweKombinacje-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-8f7127dd31a9bb40925f.json  codemodel-v2-9323834ef6607ea25dc8.json  index-2022-04-21T18-52-19-0008.json  target-PokeroweKombinacje-Debug-d339548fe150f78e04fa.json
build-PokeroweKombinacje-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-72e0791924f18596f01a.json  codemodel-v2-9a73152826d86cd963dc.json  index-2022-04-20T14-38-59-0502.json  target-PokeroweKombinacje-Debug-99dfb92bbc1caecd7b85.json
build-PokeroweKombinacje-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-PokeroweKombinacje-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Karty.h.32C6E987B1BE1068.idx  Klasy.cpp.996E1C99919E10BF.idx  _mingw_unicode.h.85E97460D939C09F.idx  combaseapi.h.F34040487B95670C.idx  ddeml.h.16793C6133C50845.idx  dpapi.h.79A1F3213749DF37.idx  druk.cpp.9CFBCE3B94E62BCE.idx  druk.h.01DA5AB21E6C8E9E.idx  (+35 more)
build-PokeroweKombinacje-Desktop_Qt_6_3_0_MinGW_64_bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-PokeroweKombinacje-Desktop_Qt_6_3_0_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
(+45 files in other folders)
